--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
+
+
 body {
+  background: #0f3854;
+  background: radial-gradient(ellipse at center,  #0a2e38  0%, #000000 70%);
+  background-size: 100%;
   margin: 0;
 }
 html,
